added info background color of ivory

--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -6,3 +6,41 @@
 	
 
 }
+
+.Ivory-billed-title{
+
+	font-family: Helvetica;
+	color: #e0ad48;
+
+}
+
+.Ivory-section{
+	background-color: #e0ad48;
+
+}
+
+.bird-info{
+	font-family:;
+	color: white;
+	font-family:'Crimson Text', serif; 
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
