--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,27 +4,22 @@ body {
 background-color:#231f20;
 }
 
-
-
 .intro-message{
 	font-family:"Crimson";
-	font-size:24px;
+	font-size:18px;
 	color: white;
 }
 
 .top-row-birds{
-
 }
 
 .top-row-bird-names{
 	font-family:Helvetica;
 	font-size:14px;
 	color:white;
-
 }
 
 .bottom-row-birds {
-
 
 }
 
@@ -32,12 +27,12 @@ background-color:#231f20;
 	font-family:Helvetica;
 	font-size:14px;
 	color:white;
-	
 }
 
 
 
 /*******  BEGIN MEDIA QUERIES *******/
+
 /* 481px - 768px */
 @media screen and (min-width:480px) {
       body  {
@@ -47,23 +42,44 @@ background-color:#231f20;
 	.intro-message{
 		font-size:18px;
 	}
-}
-/* 768px - 1024px */
-@media screen and (min-width:768px) {
-      body  {
-            background: #00FF00;   /* Green */
-      }
-    .intro-message{
-		font-size:18px;
+
+	.top-row-birds{
 	}
-}
-/* 1024px and Larger  */
-@media screen and (min-width:1024px) {
-      body  {
-            background: #0000FF;   /* Blue */
-      }
-    .intro-message{
-		font-size:16px;
+
+	.bottom-row-birds{
 	}
 }
 
+/* 768px - 1024px */
+@media screen and (min-width:768px) {
+      body{
+            background: #00FF00;   /* Green */
+      }
+
+	.intro-message{
+		font-size:18px;
+	}
+
+	.top-row-birds{
+	}
+
+	.bottom-row-birds{
+	}
+}
+
+/* 1024px and Larger  */
+@media screen and (min-width:1024px) {
+      body{
+            background: #0000FF;   /* Blue */
+      }
+    
+    .intro-message{
+		font-size:16px;
+	}
+
+	.top-row-birds{
+	}
+
+	.bottom-row-birds {
+	}
+}
