--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,16 +1,30 @@
 
-body {
+body{
+	background-color:#231f20;
+}
 
-background-color:#231f20;
+h1.siteheader{
+	color:#231f20;
+	background-color: #e0ad48;
+	height:100%;
+	margin-top:-10px;
+	margin-left:-10px;
+	margin-right:-10px;
+	padding-top:50px;
+	padding-left:25px;
 }
 
 .intro-message{
 	font-family:"Crimson";
 	font-size:18px;
 	color: white;
+	padding-left:25px;
+	margin-left:-10px;
 }
 
 .top-row-birds{
+	width:100px;
+	margin:50px;
 }
 
 .top-row-bird-names{
@@ -20,7 +34,8 @@ background-color:#231f20;
 }
 
 .bottom-row-birds {
-
+	width:100px;
+	margin:50px;
 }
 
 .bottom-row-bird-names {
@@ -39,14 +54,40 @@ background-color:#231f20;
             background: #FF0000;  /* Red */
       }
 
+	h1.siteheader {
+		font-size:50px;
+	}
+
 	.intro-message{
 		font-size:18px;
 	}
 
 	.top-row-birds{
+		max-width:100%;
+		height:auto;
+	}
+
+	.top-row-birds img{
+		padding:10px;
+	}
+
+	.top-row-bird-names{
+		margin-bottom:2px;
+		font-size:16px;
 	}
 
 	.bottom-row-birds{
+		max-width:100%;
+		height:auto;
+	}
+
+	.bottom-row-birds img{
+		padding:10px;
+	}
+
+	.bottom-row-bird-names{
+		margin-bottom:2px;
+		font-size:18px;
 	}
 }
 
@@ -57,13 +98,34 @@ background-color:#231f20;
       }
 
 	.intro-message{
-		font-size:18px;
+		font-size:16px;
 	}
 
 	.top-row-birds{
+		width:100%
+	}
+
+	.top-row-birds img{
+		width:250px;
+	}
+
+	.top-row-bird-names{
+		margin-bottom:2px;
+		list-style-type:none;
 	}
 
 	.bottom-row-birds{
+		width:100%;
+		height:auto;
+	}
+
+	.bottom-row-birds img{
+		width:250px;
+	}
+
+	.bottom-row-bird-names{
+		margin-bottom:2px;
+		list-style-type:none;
 	}
 }
 
@@ -80,6 +142,26 @@ background-color:#231f20;
 	.top-row-birds{
 	}
 
+	.top-row-birds img {
+
+	}
+
+	.top-row-bird-names{
+		list-style-type:none;
+		display:inline-block;
+		margin-bottom:2px;
+	}
+
 	.bottom-row-birds {
+	}
+
+	.bottom-row-birds img {
+
+	}
+
+	.bottom-row-bird-names{
+		list-style-type:none;
+		display:inline-block;
+		margin-bottom:2px;
 	}
 }
