--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -19,11 +19,14 @@
 
 }
 
+.ivorybill_text_img {
+	float: left;
+}
+
 .bird-info{
 	font-family:;
 	color: white;
 	font-family:'Crimson Text', serif; 
-
 
 
 }
