--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,23 +32,45 @@ h1.siteheader{
 }
 
 .top-row-bird-names{
+	float:left;
 	font-family:Helvetica;
 	font-size:14px;
 	color:white;
 }
 
 .bottom-row-birds {
+	clear:both;
 	margin:25px;
 }
 
 .bottom-row-bird-names {
+	float:left;
 	font-family:Helvetica;
 	font-size:14px;
 	color:white;
 }
 
 .bird-1 {
-	text-align:center;
+	padding:5px;
+}
+
+.bird-2 {
+	padding:5px;
+}
+
+.bird-3 {
+	padding:5px;
+}
+
+.bird-4 {
+	padding:5px;
+}
+
+.bird-5 {
+	padding:5px;
+}
+
+.bird-6 {
 	padding:5px;
 }
 
@@ -118,7 +140,6 @@ h1.siteheader{
 
 	.top-row-bird-names{
 		margin-bottom:2px;
-		list-style-type:none;
 	}
 
 	.bottom-row-birds{
@@ -132,7 +153,6 @@ h1.siteheader{
 
 	.bottom-row-bird-names{
 		margin-bottom:2px;
-		list-style-type:none;
 	}
 }
 
@@ -150,12 +170,9 @@ h1.siteheader{
 	}
 
 	.top-row-birds img {
-
 	}
 
 	.top-row-bird-names{
-		list-style-type:none;
-		display:inline-block;
 		margin-bottom:2px;
 	}
 
@@ -163,12 +180,9 @@ h1.siteheader{
 	}
 
 	.bottom-row-birds img {
-
 	}
 
 	.bottom-row-bird-names{
-		list-style-type:none;
-		display:inline-block;
 		margin-bottom:2px;
 	}
 }
